--- a/meanautapp/angular-src/package.json
+++ b/meanautapp/angular-src/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-cli": "^1.0.0-beta.28.3",
+    "angular2-flash-messages": "^3.0.1",
+    "flash-messages-angular": "^4.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
