--- a/meanautapp/angular-src/tsconfig.app.json
+++ b/meanautapp/angular-src/tsconfig.app.json
@@ -3,7 +3,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "strictPropertyInitialization": false,
+    "noImplicitReturns": false,
+    "noImplicitAny": false
   },
   "files": [
     "src/main.ts",
