--- a/meanautapp/angular-src/tsconfig.spec.json
+++ b/meanautapp/angular-src/tsconfig.spec.json
@@ -2,7 +2,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../public",
+    "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
     ]
