--- a/meanautapp/package.json
+++ b/meanautapp/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app",
-    "deployheroku": "cd ../ && git subtree push --prefix meanautapp/ tranquil-wildwood-98457 MEAN_course || true"
+    "deployheroku": "cd ../ && git subtree push --prefix meanautapp/ boxing-ring-lut MEAN_course || true"
   },
   "dependencies": {
     "angular2-flash-messages": "^1.0.8",
